Update and rename .github/workflows/main.yml to .github/工作流/main.yml

--- a/.github/工作流/main.yml
+++ b/.github/工作流/main.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   send_message:
     runs-on: ubuntu-latest
-    name: send morning to 心心子
+    name: send good morning to 心心子
 
     steps:
     - name: checkout
